[package]
name = "mdbook-theme"
version = "0.1.0"
authors = ["zjpCN <jiping_zhou@foxmail.com>"]
edition = "2018"
keywords = ["book", "theme", "rustbook", "markdown"]
license = "MIT OR MPL-2.0"
readme = "README.md"
repository = ""
description = "A preprocessor and a backend to config theme for mdbook, especially with a pagetoc on the right"
exclude = ["example"]

[dependencies]
clap = "2.33.3"
mdbook = "0.4.10"
lazy_static = "1.4.0"
semver = "1.0.3"
toml = "0.5.8"
serde_json = "1.0.64"

serde = "1.0.126"
serde_derive = "1.0.126"
#strum_macros = "0.21.1"
#anyhow = "*"
# serde_repr = "*"
# regex = "*"


[workspace]
members = ["ace", "examples/demo"]
