[package]
name = "mdbook-theme"
version = "0.1.0"
authors = ["zjpCN <jiping_zhou@foxmail.com>"]
edition = "2018"
keywords = ["book", "theme", "rustbook", "markdown", "ace"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zjp-CN/mdbook-theme"
description = "A preprocessor and a backend to config theme for mdbook, especially making a pagetoc on the right and setting full color themes from the offical ace editor"
exclude = ["examples"]

[dependencies]
clap = "2.33.3"
mdbook = "0.4.10"
lazy_static = "1.4.0"
semver = "1.0.3"
toml = "0.5.8"
serde_json = "1.0.64"

serde = "1.0.126"
serde_derive = "1.0.126"
