[package]
name = "mdbook-theme"
version = "0.1.4"
authors = ["zjpCN <jiping_zhou@foxmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zjp-CN/mdbook-theme"
keywords = ["book", "theme", "rustbook", "markdown", "ace"]
description = "A preprocessor and a backend to config theme for mdbook, especially creating a pagetoc on the right and setting full color themes from the offical ace editor"
exclude = ["examples", "CHANGELOG.md", "assets"]

[dependencies]
clap         = "4"
mdbook       = "0.4"
semver       = "1"
toml         = "0.5" # wait for update of toml dep in mdbook
serde_json   = "1"

serde        = "1"
serde_derive = "1"
