[package]
name = "mdbook-theme-pre"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
mdbook = "*"
semver = "*"
serde_json = "*"
anyhow = "*"

toml = "0.5.8"

serde = "*"
serde_derive = "*"
serde_repr = "*"

lazy_static = "1.4.0"

[[bin]]
name = "mdbook-theme-pre"
path = "src/bin/pre.rs"
